tests/ui/type_positional_after_named.ql
fn run(left: Int, right: Int) -> Int {
    return left + right
}

fn main() -> Int {
    return run(left: 1, 2)
}
